# REST_Flask

./: .flaskenv  .pylintrc  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py
REST_Flask/: app.py  config.py
REST_Flask/migrations/versions/: 38ebe3bd567f_.py
REST_Flask/models/: model.py
REST_Flask/rest/: api_view.py
REST_Flask/service/: services.py
REST_Flask/static/: styles.css
REST_Flask/templates/: edit_post.html  edit_user.html  new_user.html  post_list.html  user_list.html
REST_Flask/views/: web_view.py
documentation/: SRS.md
documentation/html_prototype/: edit_post.html  edit_user.html  new_post.html  new_user.html  post.html  post_list.html  user.html  user_list.html
restflask/: app.py  config.py
restflask/models/: model.py
restflask/rest/: api_view.py
restflask/service/: services.py  validate.py
restflask/templates/: base.html  new_post.html  post.html  user.html
restflask/views/: web_view.py
tests/: test_api.py  test_web.py
