[metadata]
name = REST_Flask_application
version = 1.0.1
author = Anatolii Khyzun
author_email = anatolii.khyzun@gmail.com
description = Python project for EPAM
keywords = flask, SQLAlchemy
license = MIT License
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3
    Operating System :: OS Independent
url = https://github.com/Fhockk/REST_Flask


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9

install_requires =
    alembic==1.10.2
    astroid==2.15.0
    attrs==22.2.0
    click==8.1.3
    colorama==0.4.6
    dill==0.3.6
    exceptiongroup==1.1.0
    Flask==2.2.3
    flask-marshmallow==0.14.0
    Flask-Migrate==4.0.4
    Flask-SQLAlchemy==3.0.3
    greenlet==2.0.2
    iniconfig==2.0.0
    isort==5.12.0
    itsdangerous==2.1.2
    Jinja2==3.1.2
    lazy-object-proxy==1.9.0
    Mako==1.2.4
    MarkupSafe==2.1.2
    marshmallow==3.19.0
    marshmallow-sqlalchemy==0.29.0
    mccabe==0.7.0
    mysql-connector==2.2.9
    mysqlclient==2.1.1
    packaging==23.0
    platformdirs==3.1.0
    pluggy==1.0.0
    pylint==2.17.0
    pytest==7.2.2
    python-dotenv==1.0.0
    six==1.16.0
    SQLAlchemy==2.0.5.post1
    tomli==2.0.1
    tomlkit==0.11.6
    typing_extensions==4.5.0
    Werkzeug==2.2.3
    wrapt==1.15.0   
    